# QAgent

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
os_read_lib/: CMakeLists.txt  os_test_main.cpp  os_utils.cpp  os_utils.h
src/: CMakeLists.txt  main.cpp  qagent.cpp  qagent.h
src/common/: data.h  messagebuilder.h  querybuilder.h  utils.h
src/common/message_spec/: messagereadable_handshake.h  messagereadable_nomessage.h  messagereadable_service.h
test/: CMakeLists.txt  conf.json  fcagent.cpp  qagent.cpp
